@@ -279,7 +279,8 @@ void SusyD3PDAna::selectBaselineObjects(SusyNtSys sys)
   else if(sys == NtSys_JER       ) susySys = SystErr::JER;        // JER (gaussian)
 
   // Preselection
-  m_preElectrons = get_electrons_baseline( &d3pd.ele, !m_isMC, d3pd.evt.RunNumber(), m_susyObj, 10.*GeV, 2.47, susySys, m_isAF2 );
+  m_preElectrons = get_electrons_baseline( &d3pd.ele, !m_isMC, d3pd.evt.RunNumber(), m_susyObj, 10.*GeV, 2.47, susySys, 
+                                           m_isAF2, m_d3pdTag<D3PD_p1181 );
   m_preMuons     = get_muons_baseline( &d3pd.muo, !m_isMC, m_susyObj, 10.*GeV, 2.4, susySys );
   m_preJets      = get_jet_baseline( &d3pd.jet, &d3pd.vtx, &d3pd.evt, !m_isMC, m_susyObj, 20.*GeV, 4.9, susySys, false, goodJets );
 
@@ -346,7 +347,8 @@ void SusyD3PDAna::selectSignalObjects()
 {
   if(m_dbg) cout << "selectSignalObjects" << endl;
   uint nVtx = getNumGoodVtx();
-  m_sigElectrons = get_electrons_signal(&d3pd.ele, m_baseElectrons, nVtx, !m_isMC, m_susyObj, 10.*GeV, 0.16, 0.18, 5., 0.4);
+  m_sigElectrons = get_electrons_signal(&d3pd.ele, m_baseElectrons, nVtx, !m_isMC, m_susyObj, 10.*GeV, 0.16, 0.18, 5., 0.4, 
+                                        m_d3pdTag<D3PD_p1181);
   m_sigMuons     = get_muons_signal(&d3pd.muo, m_baseMuons, nVtx, !m_isMC, m_susyObj, 10.*GeV, .12, 3., 1.);
   m_sigJets      = get_jet_signal(&d3pd.jet, m_susyObj, m_baseJets, 20.*GeV, 2.5, 0.75);
   m_sigTaus      = get_taus_signal(&d3pd.tau, m_baseTaus);
@@ -685,6 +687,7 @@ void SusyD3PDAna::checkEventCleaning()
   if(passGRL()) m_cutFlags |= ECut_GRL;
   if(passTTCVeto()) m_cutFlags |= ECut_TTC;
   if(passLarErr()) m_cutFlags |= ECut_LarErr;
+  if(passTileErr()) m_cutFlags |= ECut_TileErr;
   if(passGoodVtx()) m_cutFlags |= ECut_GoodVtx;
 }
 
