@@ -113,6 +113,7 @@ class SusyNtMaker : public SusyD3PDAna
     uint                n_evt_grl;
     uint                n_evt_ttcVeto;
     uint                n_evt_larErr;
+    uint                n_evt_tileErr;
     uint                n_evt_larHole;
     uint                n_evt_hotSpot;
     uint                n_evt_badJet;
